--- a/stm32/cube/cube.ioc
+++ b/stm32/cube/cube.ioc
@@ -1,6 +1,6 @@
 #MicroXplorer Configuration settings - do not modify
-CAD.formats=
-CAD.pinconfig=
+CAD.formats=[]
+CAD.pinconfig=Dual
 CAD.provider=
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
@@ -167,8 +167,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=Robodog.ioc
-ProjectManager.ProjectName=Robodog
+ProjectManager.ProjectFileName=cube.ioc
+ProjectManager.ProjectName=cube
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
@@ -185,9 +185,9 @@ RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=42000000
 RCC.APB1TimFreq_Value=84000000
-RCC.APB2CLKDivider=RCC_HCLK_DIV2
-RCC.APB2Freq_Value=84000000
-RCC.APB2TimFreq_Value=168000000
+RCC.APB2CLKDivider=RCC_HCLK_DIV4
+RCC.APB2Freq_Value=42000000
+RCC.APB2TimFreq_Value=84000000
 RCC.CECFreq_Value=32786.88524590164
 RCC.CortexFreq_Value=168000000
 RCC.EthernetFreq_Value=8000000
