--- a/stm32/cube/cube.ioc
+++ b/stm32/cube/cube.ioc
@@ -10,45 +10,52 @@ Mcu.Family=STM32F4
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
-Mcu.IP3=TIM2
-Mcu.IP4=TIM3
-Mcu.IP5=TIM4
-Mcu.IP6=USART3
-Mcu.IP7=USB_OTG_FS
-Mcu.IPNb=8
+Mcu.IP3=TIM1
+Mcu.IP4=TIM2
+Mcu.IP5=TIM3
+Mcu.IP6=TIM4
+Mcu.IP7=USART3
+Mcu.IP8=USB_OTG_FS
+Mcu.IPNb=9
 Mcu.Name=STM32F446Z(C-E)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PD13
-Mcu.Pin11=PD14
-Mcu.Pin12=PG6
-Mcu.Pin13=PG7
-Mcu.Pin14=PC8
-Mcu.Pin15=PC9
-Mcu.Pin16=PA8
-Mcu.Pin17=PA9
-Mcu.Pin18=PA10
-Mcu.Pin19=PA11
+Mcu.Pin10=PB10
+Mcu.Pin11=PB11
+Mcu.Pin12=PB14
+Mcu.Pin13=PD8
+Mcu.Pin14=PD9
+Mcu.Pin15=PD12
+Mcu.Pin16=PD13
+Mcu.Pin17=PG6
+Mcu.Pin18=PG7
+Mcu.Pin19=PC8
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PA12
-Mcu.Pin21=PA13
-Mcu.Pin22=PA14
-Mcu.Pin23=PB7
-Mcu.Pin24=PB8
-Mcu.Pin25=PB9
-Mcu.Pin26=VP_SYS_VS_Systick
-Mcu.Pin27=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin28=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin29=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin20=PC9
+Mcu.Pin21=PA8
+Mcu.Pin22=PA9
+Mcu.Pin23=PA10
+Mcu.Pin24=PA11
+Mcu.Pin25=PA12
+Mcu.Pin26=PA13
+Mcu.Pin27=PA14
+Mcu.Pin28=PB7
+Mcu.Pin29=PB8
 Mcu.Pin3=PH0-OSC_IN
+Mcu.Pin30=PB9
+Mcu.Pin31=VP_SYS_VS_Systick
+Mcu.Pin32=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin33=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin34=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin35=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin4=PH1-OSC_OUT
 Mcu.Pin5=PB0
-Mcu.Pin6=PB14
-Mcu.Pin7=PD8
-Mcu.Pin8=PD9
-Mcu.Pin9=PD12
-Mcu.PinsNb=30
+Mcu.Pin6=PE9
+Mcu.Pin7=PE11
+Mcu.Pin8=PE13
+Mcu.Pin9=PE14
+Mcu.PinsNb=36
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446ZETx
@@ -103,6 +110,10 @@ PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=LD1 [Green]
 PB0.Locked=true
 PB0.Signal=GPIO_Output
+PB10.Locked=true
+PB10.Signal=S_TIM2_CH3
+PB11.Locked=true
+PB11.Signal=S_TIM2_CH4
 PB14.GPIOParameters=GPIO_Label
 PB14.GPIO_Label=LD3 [Red]
 PB14.Locked=true
@@ -134,7 +145,6 @@ PD12.Signal=S_TIM4_CH1
 PD13.GPIOParameters=GPIO_Speed
 PD13.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PD13.Signal=S_TIM4_CH2
-PD14.Signal=S_TIM4_CH3
 PD8.GPIOParameters=GPIO_Label
 PD8.GPIO_Label=STLK_RX [STM32F103CBT6_PA3]
 PD8.Locked=true
@@ -145,6 +155,14 @@ PD9.GPIO_Label=STLK_TX [STM32F103CBT6_PA2]
 PD9.Locked=true
 PD9.Mode=Asynchronous
 PD9.Signal=USART3_RX
+PE11.Locked=true
+PE11.Signal=S_TIM1_CH2
+PE13.Locked=true
+PE13.Signal=S_TIM1_CH3
+PE14.Locked=true
+PE14.Signal=S_TIM1_CH4
+PE9.Locked=true
+PE9.Signal=S_TIM1_CH1
 PG6.GPIOParameters=GPIO_Label
 PG6.GPIO_Label=USB_PowerSwitchOn [STMPS2151STR_EN]
 PG6.Locked=true
@@ -192,7 +210,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,5-MX_TIM4_Init-TIM4-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,5-MX_TIM4_Init-TIM4-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -280,10 +298,22 @@ RCC.VcooutputI2SQ=48000000
 RCC.WatchDogFreq_Value=32000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
+SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
+SH.S_TIM1_CH1.ConfNb=1
+SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2
+SH.S_TIM1_CH2.ConfNb=1
+SH.S_TIM1_CH3.0=TIM1_CH3,PWM Generation3 CH3
+SH.S_TIM1_CH3.ConfNb=1
+SH.S_TIM1_CH4.0=TIM1_CH4,PWM Generation4 CH4
+SH.S_TIM1_CH4.ConfNb=1
 SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM Generation1 CH1
 SH.S_TIM2_CH1_ETR.ConfNb=1
 SH.S_TIM2_CH2.0=TIM2_CH2,PWM Generation2 CH2
 SH.S_TIM2_CH2.ConfNb=1
+SH.S_TIM2_CH3.0=TIM2_CH3,PWM Generation3 CH3
+SH.S_TIM2_CH3.ConfNb=1
+SH.S_TIM2_CH4.0=TIM2_CH4,PWM Generation4 CH4
+SH.S_TIM2_CH4.ConfNb=1
 SH.S_TIM3_CH3.0=TIM3_CH3,PWM Generation3 CH3
 SH.S_TIM3_CH3.ConfNb=1
 SH.S_TIM3_CH4.0=TIM3_CH4,PWM Generation4 CH4
@@ -292,11 +322,18 @@ SH.S_TIM4_CH1.0=TIM4_CH1,PWM Generation1 CH1
 SH.S_TIM4_CH1.ConfNb=1
 SH.S_TIM4_CH2.0=TIM4_CH2,PWM Generation2 CH2
 SH.S_TIM4_CH2.ConfNb=1
-SH.S_TIM4_CH3.0=TIM4_CH3,PWM Generation3 CH3
-SH.S_TIM4_CH3.ConfNb=1
+TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM1.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM1.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
+TIM1.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Prescaler,Period
+TIM1.Period=2000
+TIM1.Prescaler=840
 TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM2.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-TIM2.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Prescaler,Period
+TIM2.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM2.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
+TIM2.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Prescaler,Period,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4
 TIM2.Period=2000
 TIM2.Prescaler=840
 TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
@@ -308,13 +345,11 @@ TIM3.Pulse-PWM\ Generation3\ CH3=125
 TIM3.Pulse-PWM\ Generation4\ CH4=125
 TIM4.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM4.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-TIM4.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
-TIM4.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Prescaler,Period,TIM_MasterOutputTrigger,Pulse-PWM Generation1 CH1,Pulse-PWM Generation2 CH2,Pulse-PWM Generation3 CH3
+TIM4.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Prescaler,Period,TIM_MasterOutputTrigger,Pulse-PWM Generation1 CH1,Pulse-PWM Generation2 CH2
 TIM4.Period=2000
 TIM4.Prescaler=840
 TIM4.Pulse-PWM\ Generation1\ CH1=0
 TIM4.Pulse-PWM\ Generation2\ CH2=0
-TIM4.Pulse-PWM\ Generation3\ CH3=0
 TIM4.TIM_MasterOutputTrigger=TIM_TRGO_RESET
 USART3.IPParameters=VirtualMode
 USART3.VirtualMode=VM_ASYNC
@@ -322,6 +357,8 @@ USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM1_VS_ClockSourceINT.Mode=Internal
+VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
