--- a/stm32/cube/cube.ioc
+++ b/stm32/cube/cube.ioc
@@ -14,9 +14,10 @@ Mcu.IP3=TIM1
 Mcu.IP4=TIM2
 Mcu.IP5=TIM3
 Mcu.IP6=TIM4
-Mcu.IP7=USART3
-Mcu.IP8=USB_OTG_FS
-Mcu.IPNb=9
+Mcu.IP7=UART4
+Mcu.IP8=USART3
+Mcu.IP9=USB_OTG_FS
+Mcu.IPNb=10
 Mcu.Name=STM32F446Z(C-E)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
@@ -40,22 +41,24 @@ Mcu.Pin24=PA11
 Mcu.Pin25=PA12
 Mcu.Pin26=PA13
 Mcu.Pin27=PA14
-Mcu.Pin28=PB7
-Mcu.Pin29=PB8
+Mcu.Pin28=PC10
+Mcu.Pin29=PC11
 Mcu.Pin3=PH0-OSC_IN
-Mcu.Pin30=PB9
-Mcu.Pin31=VP_SYS_VS_Systick
-Mcu.Pin32=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin33=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin34=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin35=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin30=PB7
+Mcu.Pin31=PB8
+Mcu.Pin32=PB9
+Mcu.Pin33=VP_SYS_VS_Systick
+Mcu.Pin34=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin35=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin36=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin37=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin4=PH1-OSC_OUT
 Mcu.Pin5=PB0
 Mcu.Pin6=PE9
 Mcu.Pin7=PE11
 Mcu.Pin8=PE13
 Mcu.Pin9=PE14
-Mcu.PinsNb=36
+Mcu.PinsNb=38
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446ZETx
@@ -126,6 +129,12 @@ PB8.Locked=true
 PB8.Signal=S_TIM2_CH1_ETR
 PB9.Locked=true
 PB9.Signal=S_TIM2_CH2
+PC10.Locked=true
+PC10.Mode=Asynchronous
+PC10.Signal=UART4_TX
+PC11.Locked=true
+PC11.Mode=Asynchronous
+PC11.Signal=UART4_RX
 PC13.GPIOParameters=GPIO_Label
 PC13.GPIO_Label=USER_Btn [B1]
 PC13.Locked=true
@@ -210,7 +219,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,5-MX_TIM4_Init-TIM4-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,5-MX_TIM4_Init-TIM4-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_TIM1_Init-TIM1-false-HAL-true,9-MX_UART4_Init-UART4-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -351,6 +360,8 @@ TIM4.Prescaler=840
 TIM4.Pulse-PWM\ Generation1\ CH1=0
 TIM4.Pulse-PWM\ Generation2\ CH2=0
 TIM4.TIM_MasterOutputTrigger=TIM_TRGO_RESET
+UART4.IPParameters=VirtualMode
+UART4.VirtualMode=Asynchronous
 USART3.IPParameters=VirtualMode
 USART3.VirtualMode=VM_ASYNC
 USB_OTG_FS.IPParameters=VirtualMode
